# aircrack-tui

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: README.md  install-dev.sh  install.sh  update.sh
src/aircrack_tui/: __init__.py  main.py
src/aircrack_tui/utils/: datastructures.py  simple_tasks.py
src/aircrack_tui/utils/api/: __init__.py  models.py  tui_main.py
src/aircrack_tui/utils/api/shell/: base.py  shell_cmd.py
src/aircrack_tui/utils/api/textual/: tui_debug.py  tui_main.py
src/aircrack_tui/utils/pages/: README.md  __init__.py  page_debug.py  page_dependencies_check.py  page_main.py  page_size_check.py
src/aircrack_tui/utils/pages/page_checks/: page_dependencies_check.py  page_size_check.py
src/aircrack_tui/utils/pages/page_main/: __init__.py  page_main.py  widget_interface.py  widget_menu.py  widget_target.py
src/aircrack_tui/utils/pages/page_main/interface/: interface_select.py
src/aircrack_tui/utils/styles/: page_debug.tcss  page_dependencies_check.tcss  page_main.tcss  page_main.tcss.bak  page_primary.tcss  page_size_check.tcss
src/aircrack_tui/utils/styles/page_main/: widget_interface.tcss  widget_menu.tcss  widget_target.tcss
src/aircrack_tui/utils/styles/page_main/interface/: interface_select.tcss
tests/: pytest.ini  test_01_version.py
