[project]
name = "aircrack-tui"
version = "0.1.0"
description = "TUI wrapper for aircrack-ng based on typer and textual libs."
authors = [
    {name = "ixenion", email = "stridjj@gmail.com"},
]
dependencies = [
    "anyio==4.7.0",
    "blinker==1.9.0",
    "certifi==2024.8.30",
    "click==8.1.7",
    "dep-logic==0.4.9",
    "distlib==0.3.9",
    "filelock==3.16.1",
    "findpython==0.6.2",
    "h11==0.14.0",
    "hishel==0.1.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "installer==0.7.0",
    "linkify-it-py==2.0.3",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "packaging==24.2",
    "pbs-installer==2024.10.16",
    "pdm==2.22.0",
    "platformdirs==4.3.6",
    "Pygments==2.18.0",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.0.1",
    "resolvelib==1.1.0",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "textual==1.0.0",
    "tomlkit==0.13.2",
    "truststore==0.10.0",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "uc-micro-py==1.0.3",
    "unearth==0.17.2",
    "virtualenv==20.28.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


# Make src path explicit
[tool.pdm.build]
package-dir = "src"
includes = ["src/"]

# CLI scripts
[project.scripts]
aircrack-tui = "aircrack_tui.main:app_entry_point"

# Dev libs
[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-aio>=1.9.0",
    "pytest-timeout>=2.3.1",
    "rich>=13.9.4",
]
